--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="clsCustomer.cs" />
     <Compile Include="clsCustomerCollection.cs" />
+    <Compile Include="clsCustomerUser.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsOrderline.cs" />
     <Compile Include="clsOrders.cs" />
