--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,7 +59,10 @@
     <Compile Include="clsOrderline.cs" />
     <Compile Include="clsOrders.cs" />
     <Compile Include="clsStock.cs" />
-    <Compile Include="clsStockCollection.cs" />
+    <Compile Include="..\..\clsStockCollection.cs">
+      <Link>clsStockCollection.cs</Link>
+    </Compile>
+    <Compile Include="clsStockUser.cs" />
     <Compile Include="clsSuppliers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
